# lojadelivros

./: Dockerfile  Procfile  README.md  docker-compose.yml  env.dev  manage.py  pyproject.toml  pytest.ini  request_auth_token_example.py
.github/workflows/: build.yml  github-actions-demo.yml  workflow-pr.yml
lojadelivros/: asgi.py  settings.py  urls.py  wsgi.py
order/: factories.py  urls.py
order/migrations/: 0001_initial.py  0002_remove_order_product_remove_order_user_order_cidade_and_more.py  0003_order_idade.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/: test_order.py  test_order_viewset.py
order/viewsets/: order_viewset.py
product/: admin.py  factories.py
product/migrations/: 0001_initial.py  0002_alter_product_price.py  0003_alter_product_price.py
product/models/: product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/: test_category.py  test_product.py
product/tests/test_viewsets/: test_viewset_category.py  test_viewset_product.py
product/viewsets/: product_viewset.py
